syntax = "proto3";

package org.hse.nnbuilder.services;

service NNVersionService {
  rpc makeNNSnapshot (makeNNSnapshotRequest) returns (makeNNSnapshotResponse);
  rpc deleteNNVersion (deleteNNVersionRequest) returns (deleteNNVersionResponse);
}

message makeNNSnapshotRequest {
  int64 nnId = 1; //id of neural network to copy
}

message makeNNSnapshotResponse {
  int64 nnId = 1; //id of created snapshot
  string exception = 2;
}

message deleteNNVersionRequest {
  int64 nnId = 1; //id of neural network to delete
}

message deleteNNVersionResponse {}